<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/from"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@id/user_avatar"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/YouTube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youtube"
        android:textSize="16sp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@id/from"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_163_5k_views"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@id/YouTube"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        android:layout_marginStart="5dp"/>

    <ImageView
        android:id="@+id/bookmark"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/bookmark"
        android:src="@drawable/bookmark_icon"
        app:layout_constraintBottom_toBottomOf="@id/user_name"
        app:layout_constraintTop_toTopOf="@id/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_avatar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/poster"
        android:src="@drawable/poster"
        app:layout_constraintTop_toBottomOf="@id/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mashups"
        android:textSize="14sp"
        app:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toTopOf="@id/button_barrier"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/futurama"
        android:textSize="14sp"
        app:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/button_barrier"
        app:layout_constraintStart_toEndOf="@id/button1"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_of_thrones"
        android:textSize="14sp"
        app:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/button_barrier"
        app:layout_constraintStart_toEndOf="@id/button2"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/arrow"
        android:textSize="14sp"
        app:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/button_barrier"
        app:layout_constraintStart_toEndOf="@id/button3"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/button_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="favourite, likes, retweet, retweets, upload, dots"/>

    <ImageView
        android:id="@+id/favourite"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/favourite"
        android:src="@drawable/favourite_icon"
        app:layout_constraintTop_toTopOf="@id/button_barrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintTop_toTopOf="@id/button_barrier"
        app:layout_constraintStart_toEndOf="@id/favourite"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/retweet"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:contentDescription="@string/retweet"
        android:src="@drawable/retweet_icon"
        app:layout_constraintTop_toTopOf="@id/button_barrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/likes"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/retweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retweets"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintTop_toTopOf="@id/button_barrier"
        app:layout_constraintStart_toEndOf="@id/retweet"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/upload"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/upload"
        android:src="@drawable/upload_icon"
        app:layout_constraintTop_toTopOf="@id/button_barrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/retweets"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"/>

    <ImageView
        android:id="@+id/dots"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/dots"
        android:src="@drawable/dots_icon"
        app:layout_constraintTop_toTopOf="@id/button_barrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>